pass_1/tests/should-fail/NoMain.java
class NoMain {
    public int run(){
	    return 9;
    }
} 
